--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+kaggle
 matplotlib
 seaborn
 numpy#==1.23.5
 pandas#==1.5.3
 scipy#==1.10.0
+
+# Trick to install the version of Tensorflow depending on your processor: darwin == Mac, ARM == M1
+tensorflow-macos==2.10.0; sys_platform == 'darwin' and 'ARM' in platform_version # Mac M-chips
+tensorflow==2.10.0; sys_platform == 'darwin' and 'ARM' not in platform_version # Mac Intel chips
+tensorflow==2.10.0; sys_platform != 'darwin' # Windows & Ubuntu Intel chips
